--- a/hata/item.html
+++ b/hata/item.html
@@ -191,7 +191,7 @@
             </div>
             <div class="filter__overlay js-filter-overlay"></div>
         </div>
-        <div class="breadcrumbs">
+        <div class="breadcrumbs breadcrumbs_mt">
             <div class="container">
                 <nav class="breadcrumbs__nav">
                     <ul class="breadcrumbs__list">
