--- a/hata/apartments.html
+++ b/hata/apartments.html
@@ -431,7 +431,7 @@
                         </ul>
                     </div>
                     <div class="col-container col-container_four">
-                        <a href="./item.html" class="top__item js-swiper">
+                        <article href="./item.html" class="top__item js-swiper">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
@@ -456,8 +456,10 @@
                                         </picture>
                                     </div>
                                 </div>
+                                <button href="#" class="top__control top__control_prev"></button>
+                                <button href="#" class="top__control top__control_next"></button>
                             </div>
-                            <div class="top__body">
+                            <a href="#" class="top__body">
                                 <h3 class="top__title">Квартира 10км от Минска</h3>
                                 <span class="top__description js-excerpt" data-length="80">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eligendi ab qui eum ipsam? Enim qui totam iure, assumenda nihil molestiae eos quas possimus rerum, repellat eveniet facere. Delectus, veritatis esse ea debitis nihil ratione ab non possimus illum molestiae? Est, numquam qui accusamus commodi adipisci quia! Repellat magni reiciendis, officia, quisquam, sit amet aliquam corrupti nam veniam harum placeat!</span>
                                 <label class="top__like">
@@ -471,9 +473,9 @@
                                                 C512,93.417,453.532,30,376,30z"/>
                                     </svg>
                                 </label>
-                            </div>
-                        </a>
-                        <a href="./item.html" class="top__item js-swiper">
+                            </a>
+                        </article>
+                        <article href="./item.html" class="top__item js-swiper">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
@@ -498,8 +500,10 @@
                                         </picture>
                                     </div>
                                 </div>
+                                <button href="#" class="top__control top__control_prev"></button>
+                                <button href="#" class="top__control top__control_next"></button>
                             </div>
-                            <div class="top__body">
+                            <a href="#" class="top__body">
                                 <h3 class="top__title">Квартира 10км от Минска</h3>
                                 <span class="top__description js-excerpt" data-length="80">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eligendi ab qui eum ipsam? Enim qui totam iure, assumenda nihil molestiae eos quas possimus rerum, repellat eveniet facere. Delectus, veritatis esse ea debitis nihil ratione ab non possimus illum molestiae? Est, numquam qui accusamus commodi adipisci quia! Repellat magni reiciendis, officia, quisquam, sit amet aliquam corrupti nam veniam harum placeat!</span>
                                 <label class="top__like">
@@ -513,9 +517,9 @@
                                                 C512,93.417,453.532,30,376,30z"/>
                                     </svg>
                                 </label>
-                            </div>
-                        </a>
-                        <a href="./item.html" class="top__item js-swiper">
+                            </a>
+                        </article>
+                        <article href="./item.html" class="top__item js-swiper">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
@@ -540,8 +544,10 @@
                                         </picture>
                                     </div>
                                 </div>
+                                <button href="#" class="top__control top__control_prev"></button>
+                                <button href="#" class="top__control top__control_next"></button>
                             </div>
-                            <div class="top__body">
+                            <a href="#" class="top__body">
                                 <h3 class="top__title">Квартира 10км от Минска</h3>
                                 <span class="top__description js-excerpt" data-length="80">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eligendi ab qui eum ipsam? Enim qui totam iure, assumenda nihil molestiae eos quas possimus rerum, repellat eveniet facere. Delectus, veritatis esse ea debitis nihil ratione ab non possimus illum molestiae? Est, numquam qui accusamus commodi adipisci quia! Repellat magni reiciendis, officia, quisquam, sit amet aliquam corrupti nam veniam harum placeat!</span>
                                 <label class="top__like">
@@ -555,9 +561,9 @@
                                                 C512,93.417,453.532,30,376,30z"/>
                                     </svg>
                                 </label>
-                            </div>
-                        </a>
-                        <a href="./item.html" class="top__item js-swiper">
+                            </a>
+                        </article>
+                        <article href="./item.html" class="top__item js-swiper">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
@@ -582,8 +588,10 @@
                                         </picture>
                                     </div>
                                 </div>
+                                <button href="#" class="top__control top__control_prev"></button>
+                                <button href="#" class="top__control top__control_next"></button>
                             </div>
-                            <div class="top__body">
+                            <a href="#" class="top__body">
                                 <h3 class="top__title">Квартира 10км от Минска</h3>
                                 <span class="top__description js-excerpt" data-length="80">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eligendi ab qui eum ipsam? Enim qui totam iure, assumenda nihil molestiae eos quas possimus rerum, repellat eveniet facere. Delectus, veritatis esse ea debitis nihil ratione ab non possimus illum molestiae? Est, numquam qui accusamus commodi adipisci quia! Repellat magni reiciendis, officia, quisquam, sit amet aliquam corrupti nam veniam harum placeat!</span>
                                 <label class="top__like">
@@ -597,8 +605,8 @@
                                                 C512,93.417,453.532,30,376,30z"/>
                                     </svg>
                                 </label>
-                            </div>
-                        </a>
+                            </a>
+                        </article>
                     </div>
                 </div>
             </div>
@@ -622,6 +630,8 @@
                                             </picture>
                                         </div>
                                     </div>
+                                    <button href="#" class="top__control top__control_prev"></button>
+                                    <button href="#" class="top__control top__control_next"></button>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -670,6 +680,9 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <button class="apartment__tip">
+                                            <span class="apartment__tip-img"></span>
+                                        </button>
                                     </div>
                                 </div>
                             </a>
@@ -689,6 +702,8 @@
                                             </picture>
                                         </div>
                                     </div>
+                                    <button href="#" class="top__control top__control_prev"></button>
+                                    <button href="#" class="top__control top__control_next"></button>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -737,6 +752,9 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <button class="apartment__tip">
+                                            <span class="apartment__tip-img"></span>
+                                        </button>
                                     </div>
                                 </div>
                             </a>
@@ -756,6 +774,8 @@
                                             </picture>
                                         </div>
                                     </div>
+                                    <button href="#" class="top__control top__control_prev"></button>
+                                    <button href="#" class="top__control top__control_next"></button>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -804,6 +824,9 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <button class="apartment__tip">
+                                            <span class="apartment__tip-img"></span>
+                                        </button>
                                     </div>
                                 </div>
                             </a>
@@ -823,6 +846,8 @@
                                             </picture>
                                         </div>
                                     </div>
+                                    <button href="#" class="top__control top__control_prev"></button>
+                                    <button href="#" class="top__control top__control_next"></button>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -871,6 +896,9 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <button class="apartment__tip">
+                                            <span class="apartment__tip-img"></span>
+                                        </button>
                                     </div>
                                 </div>
                             </a>
@@ -890,6 +918,8 @@
                                             </picture>
                                         </div>
                                     </div>
+                                    <button href="#" class="top__control top__control_prev"></button>
+                                    <button href="#" class="top__control top__control_next"></button>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -938,6 +968,9 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <button class="apartment__tip">
+                                            <span class="apartment__tip-img"></span>
+                                        </button>
                                     </div>
                                 </div>
                             </a>
