--- a/hata/apartments.html
+++ b/hata/apartments.html
@@ -431,7 +431,7 @@
                         </ul>
                     </div>
                     <div class="col-container col-container_four">
-                        <article href="./item.html" class="top__item js-swiper">
+                        <article class="top__item js-swiper">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
@@ -456,10 +456,10 @@
                                         </picture>
                                     </div>
                                 </div>
-                                <button href="#" class="top__control top__control_prev"></button>
-                                <button href="#" class="top__control top__control_next"></button>
+                                <button class="top__control top__control_prev"></button>
+                                <button class="top__control top__control_next"></button>
                             </div>
-                            <a href="#" class="top__body">
+                            <a href="./item.html" class="top__body">
                                 <h3 class="top__title">Квартира 10км от Минска</h3>
                                 <span class="top__description js-excerpt" data-length="80">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eligendi ab qui eum ipsam? Enim qui totam iure, assumenda nihil molestiae eos quas possimus rerum, repellat eveniet facere. Delectus, veritatis esse ea debitis nihil ratione ab non possimus illum molestiae? Est, numquam qui accusamus commodi adipisci quia! Repellat magni reiciendis, officia, quisquam, sit amet aliquam corrupti nam veniam harum placeat!</span>
                                 <label class="top__like">
@@ -475,7 +475,7 @@
                                 </label>
                             </a>
                         </article>
-                        <article href="./item.html" class="top__item js-swiper">
+                        <article class="top__item js-swiper">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
@@ -500,10 +500,10 @@
                                         </picture>
                                     </div>
                                 </div>
-                                <button href="#" class="top__control top__control_prev"></button>
-                                <button href="#" class="top__control top__control_next"></button>
+                                <button class="top__control top__control_prev"></button>
+                                <button class="top__control top__control_next"></button>
                             </div>
-                            <a href="#" class="top__body">
+                            <a href="./item.html" class="top__body">
                                 <h3 class="top__title">Квартира 10км от Минска</h3>
                                 <span class="top__description js-excerpt" data-length="80">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eligendi ab qui eum ipsam? Enim qui totam iure, assumenda nihil molestiae eos quas possimus rerum, repellat eveniet facere. Delectus, veritatis esse ea debitis nihil ratione ab non possimus illum molestiae? Est, numquam qui accusamus commodi adipisci quia! Repellat magni reiciendis, officia, quisquam, sit amet aliquam corrupti nam veniam harum placeat!</span>
                                 <label class="top__like">
@@ -519,7 +519,7 @@
                                 </label>
                             </a>
                         </article>
-                        <article href="./item.html" class="top__item js-swiper">
+                        <article class="top__item js-swiper">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
@@ -544,10 +544,10 @@
                                         </picture>
                                     </div>
                                 </div>
-                                <button href="#" class="top__control top__control_prev"></button>
-                                <button href="#" class="top__control top__control_next"></button>
+                                <button class="top__control top__control_prev"></button>
+                                <button class="top__control top__control_next"></button>
                             </div>
-                            <a href="#" class="top__body">
+                            <a href="./item.html" class="top__body">
                                 <h3 class="top__title">Квартира 10км от Минска</h3>
                                 <span class="top__description js-excerpt" data-length="80">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eligendi ab qui eum ipsam? Enim qui totam iure, assumenda nihil molestiae eos quas possimus rerum, repellat eveniet facere. Delectus, veritatis esse ea debitis nihil ratione ab non possimus illum molestiae? Est, numquam qui accusamus commodi adipisci quia! Repellat magni reiciendis, officia, quisquam, sit amet aliquam corrupti nam veniam harum placeat!</span>
                                 <label class="top__like">
@@ -563,7 +563,7 @@
                                 </label>
                             </a>
                         </article>
-                        <article href="./item.html" class="top__item js-swiper">
+                        <article class="top__item js-swiper">
                             <div class="top__head">
                                 <span class="top__head-price">883 USD/м<sup>2</sup></span>
                                 <span class="top__head-year">2014 г. п.</span>
@@ -588,10 +588,10 @@
                                         </picture>
                                     </div>
                                 </div>
-                                <button href="#" class="top__control top__control_prev"></button>
-                                <button href="#" class="top__control top__control_next"></button>
+                                <button class="top__control top__control_prev"></button>
+                                <button class="top__control top__control_next"></button>
                             </div>
-                            <a href="#" class="top__body">
+                            <a href="./item.html" class="top__body">
                                 <h3 class="top__title">Квартира 10км от Минска</h3>
                                 <span class="top__description js-excerpt" data-length="80">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eligendi ab qui eum ipsam? Enim qui totam iure, assumenda nihil molestiae eos quas possimus rerum, repellat eveniet facere. Delectus, veritatis esse ea debitis nihil ratione ab non possimus illum molestiae? Est, numquam qui accusamus commodi adipisci quia! Repellat magni reiciendis, officia, quisquam, sit amet aliquam corrupti nam veniam harum placeat!</span>
                                 <label class="top__like">
@@ -630,8 +630,8 @@
                                             </picture>
                                         </div>
                                     </div>
-                                    <button href="#" class="top__control top__control_prev"></button>
-                                    <button href="#" class="top__control top__control_next"></button>
+                                    <button class="top__control top__control_prev"></button>
+                                    <button class="top__control top__control_next"></button>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -702,8 +702,8 @@
                                             </picture>
                                         </div>
                                     </div>
-                                    <button href="#" class="top__control top__control_prev"></button>
-                                    <button href="#" class="top__control top__control_next"></button>
+                                    <button class="top__control top__control_prev"></button>
+                                    <button class="top__control top__control_next"></button>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -774,8 +774,8 @@
                                             </picture>
                                         </div>
                                     </div>
-                                    <button href="#" class="top__control top__control_prev"></button>
-                                    <button href="#" class="top__control top__control_next"></button>
+                                    <button class="top__control top__control_prev"></button>
+                                    <button class="top__control top__control_next"></button>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -846,8 +846,8 @@
                                             </picture>
                                         </div>
                                     </div>
-                                    <button href="#" class="top__control top__control_prev"></button>
-                                    <button href="#" class="top__control top__control_next"></button>
+                                    <button class="top__control top__control_prev"></button>
+                                    <button class="top__control top__control_next"></button>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
@@ -918,8 +918,8 @@
                                             </picture>
                                         </div>
                                     </div>
-                                    <button href="#" class="top__control top__control_prev"></button>
-                                    <button href="#" class="top__control top__control_next"></button>
+                                    <button class="top__control top__control_prev"></button>
+                                    <button class="top__control top__control_next"></button>
                                 </div>
                                 <div class="apartment__main">
                                     <div class="apartment__body">
