--- a/hata/index.html
+++ b/hata/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hata.by</title>
     <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/main.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -951,5 +950,6 @@
         </div>
     </footer>
     <a href="#main" class="scroll js-scroll js-scroll-link"></a>
+    <script src="./js/main.js"></script>
 </body>
 </html>
