--- a/braun/index.html
+++ b/braun/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/main.js" defer></script>
     <title>Braun</title>
 </head>
 <body>
@@ -25,11 +24,12 @@
         </ul>
     </div>
     <main class="main">
-        <section class="banner">
+        <section class="banner banner_first">
             <picture class="banner__bg">
                 <source srcset="./img/banner_1.webp" type="image/webp">
                 <img src="./img/banner_1.jpg" alt="Фоновое изображение">
             </picture>
+            <img class="banner__person" src="./img/person_1.png" alt="Бритвы Braun">
             <div class="container">
                 <div class="banner__wrap">
                     <div class="banner__content">
@@ -41,7 +41,7 @@
         <section class="row row_dark">
             <div class="container">
                 <div class="row__container row__container_small">
-                    <a href="#" target="_blank" class="item item_small">
+                    <a href="#" target="_blank" class="item item_small wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                         <h3 class="item__title text_tac">Электробритвы</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_1.webp" type="image/webp">
@@ -49,7 +49,7 @@
                         </picture>
                         <span class="item__arrow"></span>
                     </a>
-                    <a href="#" target="_blank" class="item item_small">
+                    <a href="#" target="_blank" class="item item_small wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                         <h3 class="item__title text_tac">Триммеры для&nbsp;бороды</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_2.webp" type="image/webp">
@@ -57,7 +57,7 @@
                         </picture>
                         <span class="item__arrow"></span>
                     </a>
-                    <a href="#" target="_blank" class="item item_small">
+                    <a href="#" target="_blank" class="item item_small wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                         <h3 class="item__title text_tac">Триммеры для&nbsp;всего тела</h3>
                         <picture class="item__img">
                             <source srcset="./img/item_small_3.webp" type="image/webp">
@@ -68,10 +68,24 @@
                 </div>
             </div>
         </section>
+        <section class="banner banner_second">
+            <picture class="banner__bg">
+                <source srcset="./img/banner_2.webp" type="image/webp">
+                <img src="./img/banner_2.jpg" alt="Фоновое изображение">
+            </picture>
+            <div class="container">
+                <div class="banner__wrap">
+                    <div class="banner__content">
+                        <h2 class="banner__title">Электробритвы <br><span class="text_bold">— для бороды</span></h2>
+                        <button class="button button_video">видео линейки</button>
+                    </div>
+                </div>
+            </div>
+        </section> 
         <section class="row">
             <div class="container">
                 <div class="row__container row__container_big">
-                    <article target="_blank" class="item item_big">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_1.webp" type="image/webp">
                             <img src="./img/item_big_1.jpg" alt="Электробритвы Series 9">
@@ -91,7 +105,7 @@
                             <a href="#" target="_blank" class="button button_item">подробнее о модели</a>
                         </div>
                     </article>
-                    <article target="_blank" class="item item_big">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_2.webp" type="image/webp">
                             <img src="./img/item_big_2.jpg" alt="Электробритвы Series 8">
@@ -111,7 +125,7 @@
                             <a href="#" target="_blank" class="button button_item">подробнее о модели</a>
                         </div>
                     </article>
-                    <article target="_blank" class="item item_big">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_3.webp" type="image/webp">
                             <img src="./img/item_big_3.jpg" alt="Электробритвы Series 3">
@@ -134,10 +148,25 @@
                 </div>
             </div>
         </section>
+        <section class="banner banner_third">
+            <picture class="banner__bg">
+                <source srcset="./img/banner_3.webp" type="image/webp">
+                <img src="./img/banner_3.jpg" alt="Фоновое изображение">
+            </picture>
+            <img class="banner__person" src="./img/person_2.png" alt="Бритвы Braun">
+            <div class="container">
+                <div class="banner__wrap">
+                    <div class="banner__content">
+                        <h2 class="banner__title">Универсальные тримеры <br><span class="text_bold">— для волос на голове <br>и на теле, для бороды</span></h2>
+                        <button class="button button_video">видео линейки</button>
+                    </div>
+                </div>
+            </div>
+        </section> 
         <section class="row">
             <div class="container container_big">
                 <div class="row__container row__container_big row__container_tight">
-                    <article target="_blank" class="item item_big">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_4.webp" type="image/webp">
                             <img src="./img/item_big_4.jpg" alt="Универсальный триммер MGK3220">
@@ -158,7 +187,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_5.webp" type="image/webp">
                             <img src="./img/item_big_5.jpg" alt="Универсальный триммер MGK5245">
@@ -179,7 +208,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.60s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_6.webp" type="image/webp">
                             <img src="./img/item_big_6.jpg" alt="Универсальный триммер MGK7220">
@@ -202,10 +231,25 @@
                 </div>
             </div>
         </section>
+        <section class="banner banner_fourth">
+            <picture class="banner__bg">
+                <source srcset="./img/banner_4.webp" type="image/webp">
+                <img src="./img/banner_4.jpg" alt="Фоновое изображение">
+            </picture>
+            <img class="banner__person" src="./img/person_3.png" alt="Бритвы Braun">
+            <div class="container">
+                <div class="banner__wrap">
+                    <div class="banner__content">
+                        <h2 class="banner__title">Тримеры <br><span class="text_bold">— для бороды</span></h2>
+                        <button class="button button_video">видео линейки</button>
+                    </div>
+                </div>
+            </div>
+        </section> 
         <section class="row">
             <div class="container container_big">
                 <div class="row__container row__container_big row__container_tight">
-                    <article target="_blank" class="item item_big">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_7.webp" type="image/webp">
                             <img src="./img/item_big_7.jpg" alt="Триммер для бороды BT3221">
@@ -226,7 +270,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_8.webp" type="image/webp">
                             <img src="./img/item_big_8.jpg" alt="Триммер для бороды BT5240">
@@ -247,7 +291,7 @@
                         </div>
                     </article>
 
-                    <article target="_blank" class="item item_big">
+                    <article target="_blank" class="item item_big wow animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                         <picture class="item__img">
                             <source srcset="./img/item_big_9.webp" type="image/webp">
                             <img src="./img/item_big_9.jpg" alt="Триммер для бороды BT7220">
@@ -283,5 +327,7 @@
             </div>
         </div>
     </footer>
+    <script src="./js/wow.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
